Fixed alignment for the search background

--- a/app/css/_store.css.scss
+++ b/app/css/_store.css.scss
@@ -4,7 +4,7 @@
     width:100%;
     padding:156px 0;
     margin-bottom:5px;
-    background:url(../img/search_bg.jpg) 50% 50%;
+    background:url(../img/search_bg.jpg);
     background-size: 100% auto;
   }
   .search{
